manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: env-sba
  namespace: env-sba
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: env-sba
  template:
    metadata:
      labels:
        app.kubernetes.io/name: env-sba
    spec:
      serviceAccountName: env-sba-sa
      containers:
        - name: env-sba
          image: iamthebonbon/env-sba:1fb1e6a
          ports:
            - name: http
              containerPort: 8081
            - name: management
              containerPort: 7081
