manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: env-sba
  namespace: env-sba
  labels:
    sba-client: "true"
    user.name: env-sba
    user.password: env-sba
    management.port: "7081"
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: env-sba
  ports:
    - name: http
      port: 8081
      targetPort: http
